# ros-cognex-demo

./: CMakeLists.txt  README.md  demo.rosinstall  package.xml
config/: camera_intrinsics.yaml  demo.rviz
include/cognex_demo/: feature_detector_node.h  plc_interface.h
launch/: demo.launch
src/: camera_info_publisher_node.cpp  feature_detector_node.cpp  location_solver_node.cpp  plc_initializer.cpp  plc_interface.cpp  pointcloud_publisher.cpp
